# aubiojs

./: .gitmodules  CMakeLists.txt  README.md  aubio.esm.js  aubio.esm.wasm  aubio.js  aubio.wasm  index.d.ts  index.html  license  onset.html  package-lock.json  package.json  pitch.html  post.js  pubspec.yaml  readme.md  tempo.html
.github/workflows/: build.yml  release.yml
cmake/aubio/: CMakeLists.txt
cmake/aubio.esm/: CMakeLists.txt
examples/: aubio.wasm  beat-detector.html  db.html  fft.html  index.html  onset.html  pitch-detector.html  pitch.html  tempo.html
spec/: aubio.spec.mjs
spec/support/: jasmine.json
src/: config.h  fft.cc  onset.cc  pitch.cc  pitch_detector.cc  tempo.cc
